Basic API key for mutations (#33)
